--- a/Spots/Spots/View/Base.lproj/Main.storyboard
+++ b/Spots/Spots/View/Base.lproj/Main.storyboard
@@ -256,11 +256,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7FN-3D-dAc">
-                                <rect key="frame" x="93" y="135" width="189" height="138"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="138" id="sTb-cw-ENL"/>
-                                </constraints>
+                                <rect key="frame" x="93" y="167" width="189" height="69"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tnr-2r-84a">
+                                <rect key="frame" x="27" y="296.66666666666669" width="318" height="24"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# Saved Spots" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRG-7a-gi6">
+                                        <rect key="frame" x="0.0" y="0.0" width="126.66666666666667" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# Saved Comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dga-kR-Tsn">
+                                        <rect key="frame" x="146.66666666666663" y="0.0" width="171.33333333333337" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="TUd-ua-XgG">
                                 <rect key="frame" x="0.0" y="406" width="375" height="323"/>
                                 <subviews>
@@ -283,9 +297,6 @@
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="   Change Profile Picture"/>
-                                        <connections>
-                                            <action selector="changePic:" destination="YhJ-RG-Gm2" eventType="touchUpInside" id="vW7-41-WGa"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFq-4t-6LO">
                                         <rect key="frame" x="0.0" y="162" width="375" height="80"/>
@@ -316,42 +327,29 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyQ-Ds-7WL">
-                                <rect key="frame" x="120" y="292" width="135" height="33.666666666666686"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="33.666666666666657" id="dDF-pt-EsH"/>
-                                </constraints>
+                                <rect key="frame" x="120.33333333333333" y="254.99999999999997" width="134.66666666666669" height="33.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="# Saved Spots" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRG-7a-gi6">
-                                <rect key="frame" x="124" y="345" width="126.66666666666667" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="7FN-3D-dAc" firstAttribute="top" secondItem="mQc-Rg-grw" secondAttribute="top" constant="47" id="9y6-1N-dtW"/>
-                            <constraint firstItem="WRG-7a-gi6" firstAttribute="centerX" secondItem="AyQ-Ds-7WL" secondAttribute="centerX" id="BPa-Y8-D2B"/>
                             <constraint firstItem="mQc-Rg-grw" firstAttribute="trailing" secondItem="TUd-ua-XgG" secondAttribute="trailing" id="FTc-UE-wqW"/>
                             <constraint firstItem="TUd-ua-XgG" firstAttribute="leading" secondItem="mQc-Rg-grw" secondAttribute="leading" id="L95-HC-XIB"/>
+                            <constraint firstItem="AyQ-Ds-7WL" firstAttribute="top" secondItem="Oi7-29-akD" secondAttribute="top" constant="255" id="Ogb-C1-Brr"/>
                             <constraint firstItem="7FN-3D-dAc" firstAttribute="leading" secondItem="mQc-Rg-grw" secondAttribute="leading" constant="93" id="Vzw-74-Ac3"/>
                             <constraint firstItem="mQc-Rg-grw" firstAttribute="bottom" secondItem="TUd-ua-XgG" secondAttribute="bottom" id="X8b-4y-1ZM"/>
-                            <constraint firstItem="WRG-7a-gi6" firstAttribute="leading" secondItem="mQc-Rg-grw" secondAttribute="leading" constant="124" id="aet-fo-Ev2"/>
+                            <constraint firstItem="tnr-2r-84a" firstAttribute="top" secondItem="AyQ-Ds-7WL" secondAttribute="bottom" constant="8" id="eNe-kq-Wfv"/>
                             <constraint firstItem="AyQ-Ds-7WL" firstAttribute="centerX" secondItem="7FN-3D-dAc" secondAttribute="centerX" id="efM-vT-zD3"/>
-                            <constraint firstItem="WRG-7a-gi6" firstAttribute="top" secondItem="AyQ-Ds-7WL" secondAttribute="bottom" constant="19.333333333333314" id="htn-I3-O7b"/>
                             <constraint firstItem="AyQ-Ds-7WL" firstAttribute="centerX" secondItem="TUd-ua-XgG" secondAttribute="centerX" id="kJ4-Bj-A8I"/>
                             <constraint firstItem="AyQ-Ds-7WL" firstAttribute="top" secondItem="7FN-3D-dAc" secondAttribute="bottom" constant="19" id="kUi-M3-fbx"/>
-                            <constraint firstItem="AyQ-Ds-7WL" firstAttribute="leading" secondItem="mQc-Rg-grw" secondAttribute="leading" constant="120" id="yCR-Gp-qS2"/>
+                            <constraint firstItem="7FN-3D-dAc" firstAttribute="top" secondItem="mQc-Rg-grw" secondAttribute="top" constant="79" id="oaf-Tr-lT6"/>
+                            <constraint firstItem="tnr-2r-84a" firstAttribute="leading" secondItem="mQc-Rg-grw" secondAttribute="leading" constant="27" id="zYo-rn-JBg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mQc-Rg-grw"/>
                     </view>
                     <navigationItem key="navigationItem" title="User and settings" id="8n4-F2-jBH"/>
-                    <connections>
-                        <outlet property="profilePic" destination="7FN-3D-dAc" id="wTy-WD-GYh"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hYC-Ib-ayh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
